samples/_failures_safe/1761090289_59b794_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_23996d11.c: In function ‘print_tokens’:
./samples/SAFE/__tmp_23996d11.c:172: error: expected ‘{’ at end of input
